--- a/data_cleaning/prompt_cleaning.ipynb
+++ b/data_cleaning/prompt_cleaning.ipynb
@@ -18,7 +18,7 @@
     {
      "data": {
       "text/plain": [
-       "(1413, 1)"
+       "(1336, 1)"
       ]
      },
      "execution_count": 2,
@@ -27,7 +27,7 @@
     }
    ],
    "source": [
-    "origin = pd.read_csv(\"prompt.csv\")\n",
+    "origin = pd.read_csv(\"prompt2.csv\")\n",
     "origin.shape"
    ]
   },
@@ -39,7 +39,7 @@
     {
      "data": {
       "text/plain": [
-       "(1407, 1)"
+       "(1330, 1)"
       ]
      },
      "execution_count": 3,
@@ -84,35 +84,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Give the text a teen vibe.</td>\n",
+       "      <td>Reimagine this as a TikTok script.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Make the text more slangy.</td>\n",
+       "      <td>Pretend this text is for a modern video.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Rewrite the text in a casual way.</td>\n",
+       "      <td>Transform this into a trendy TikTok dialogue.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Transform the text into teen speak.</td>\n",
+       "      <td>Update this for a TikTok audience.</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Put the text in a more informal tone.</td>\n",
+       "      <td>Revamp this as a social media video script.</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                  prompt\n",
-       "0             Give the text a teen vibe.\n",
-       "1             Make the text more slangy.\n",
-       "2      Rewrite the text in a casual way.\n",
-       "3    Transform the text into teen speak.\n",
-       "4  Put the text in a more informal tone."
+       "                                          prompt\n",
+       "0             Reimagine this as a TikTok script.\n",
+       "1       Pretend this text is for a modern video.\n",
+       "2  Transform this into a trendy TikTok dialogue.\n",
+       "3             Update this for a TikTok audience.\n",
+       "4    Revamp this as a social media video script."
       ]
      },
      "execution_count": 4,
@@ -153,7 +153,7 @@
     {
      "data": {
       "text/plain": [
-       "(1378, 1)"
+       "(1330, 1)"
       ]
      },
      "execution_count": 6,
@@ -174,7 +174,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "origin.to_csv(\"clean_prompt.csv\", index=False)"
+    "origin.to_csv(\"clean_prompt2.csv\", index=False)"
    ]
   }
  ],
