--- a/kaggle-training-completion.ipynb
+++ b/kaggle-training-completion.ipynb
@@ -27,7 +27,9 @@
     "!pip install -U peft\n",
     "!pip install -U transformers\n",
     "!pip install -U trl\n",
-    "!pip install -U scikit-learn"
+    "!pip install -U scikit-learn\n",
+    "!pip install -U sentencepiece\n",
+    "!pip install -U protobuf"
    ]
   },
   {
@@ -52,8 +54,8 @@
    "outputs": [],
    "source": [
     "exp_name = \"gemma\"\n",
-    "data_path = \"public_10k_unique_rewrite_prompt.csv\"\n",
-    "model_path = \"google/gemma-2b-it\"\n",
+    "data_path = \"25k_utext_uprompt.csv\"\n",
+    "model_path = \"google/gemma-7b-it\"\n",
     "output_path = f\"outputs\"\n",
     "model_save_path = f\"{exp_name}_adapter\""
    ]
@@ -66,7 +68,7 @@
    "source": [
     "epochs = 3\n",
     "batch_size = 1 \n",
-    "max_seq_length = 1024\n",
+    "max_seq_length = 1536\n",
     "lr = 2e-4\n",
     "access_token = \"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\""
    ]
@@ -432,6 +434,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "prompt = \"\"\"\n",
+    "Given are two texts, the Rewritten Text was rewritten from the Original Text by using large language model. You are trying to understand how the Original Text was transformed into the Rewritten Text.\n",
+    "Original Text: {}\n",
+    "Rewritten Text: {}\n",
+    "You should analyze the changes in style, tone, structure, content, etc. Come up with a prompt that must have been used to guide the transformation from the Original Text to the Rewritten Text. Now only output the prompt content.\n",
+    "Output: {}\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -442,7 +459,8 @@
     "        ori_text = example[\"original_text\"][i]\n",
     "        rew_text = example[\"rewritten_text\"][i]\n",
     "        rew_prompt = example[\"rewrite_prompt\"][i]\n",
-    "        text = f\"Original Text: {ori_text}\\nRewritten Text: {rew_text}\\nWrite a prompt that was likely given to the large language model to rewrite Original Text into Rewritten Text.\\nOutput: {rew_prompt}\"\n",
+    "        # text = f\"Original Text: {ori_text}\\nRewritten Text: {rew_text}\\nWrite a prompt that was likely given to the large language model to rewrite Original Text into Rewritten Text.\\nOutput: {rew_prompt}\"\n",
+    "        text = prompt.format(ori_text, rew_text, rew_prompt)\n",
     "        if token_len(text) > max_seq_length:\n",
     "            continue\n",
     "        output_texts.append(text)\n",
